@@ -61,20 +61,23 @@ Here is an example screenshot:
 .PP
 -----------------------------------------------------------------------
 .br
-  CH  7 ][ BAT: 2 hours 10 mins ][ 2006-03-28 21:00
+CH  9 ][ Elapsed: 1 min ][ 2007-04-26 17:41 ][ BAT: 2 hours 10 mins ][ WPA handshake: 00:14:6C:7E:40:80
 .br
-  BSSID              PWR  Beacons     # IV  CH  MB  ENC   ESSID
-.br
-.PP
-  00:13:10:30:24:9C   46       15     3416   6  54. WEP   the ssid
-  00:09:5B:1F:44:10   36       54        0  11  11  OPN   NETGEAR
+BSSID              PWR RXQ  Beacons    #Data, #/s  CH  MB  ENC  CIPHER AUTH ESSID
 .br
 .PP
-  BSSID              STATION            PWR  Packets  Probes
+00:09:5B:1C:AA:1D   11  16       10        0    0  11  54. OPN              NETGEAR
+00:14:6C:7A:41:81   34 100       57       14    1   9  11  WEP  WEP         bigbear
+00:14:6C:7E:40:80   32 100      752       73    2   9  54  WPA  TKIP   PSK  teddy
 .br
 .PP
-  00:13:10:30:24:9C  00:09:5B:EB:C5:2B   48      719  the ssid
-  00:13:10:30:24:9C  00:02:2D:C1:5D:1F  190       17  the ssid         
+BSSID              STATION            PWR  Lost  Packets  Probes
+.br
+.PP
+00:14:6C:7A:41:81  00:0F:B5:32:31:31   51     2       14
+(not associated)   00:14:A4:3F:8D:13   19     0        4  mossy
+00:14:6C:7A:41:81  00:0C:41:52:D1:D1   -1     0        5
+00:14:6C:7E:40:80  00:0F:B5:FD:FB:C2   35     0       99  teddy
 .br
 -----------------------------------------------------------------------
 .br
@@ -84,11 +87,16 @@ Here is an example screenshot:
             - BSSID is the Access Point MAC address
             - PWR is the signal power, which depends on the driver
             - Beacons is the total number of beacons
-            - # IVs: self-explanatory
+            - # Data: Number of captured data packets, including data broadcast packets.
             - MB is the maximum communication speed (the dot mean short preamble).
             - ENC is the encryption protocol in use:
                 OPN = open, WEP? = WEP or WPA (no data), WEP, WPA
+            - CIPHER: The cipher detected. One of CCMP, WRAP, TKIP, WEP, WEP40, or WEP104. Not mandatory, but TKIP is typically used with WPA and CCMP is typically used with WPA2.
+            - AUTH: The authentication protocol used. One of MGT (WPA/WPA2 using a separate authentication server), SKA (shared key for WEP), PSK (pre-shared key for WPA/WPA2), or OPN (open for WEP). 
             - ESSID is the network identifier
+            - Lost: The number of data packets lost over the last 10 seconds based on the sequence number. See note below for a more detailed explanation. 
+            - Packets: The number of data packets sent by the client. 
+            - Probes: Then ESSIDs probed by the client. 
 
 .PP
 The first part is the detected access points (in this case, only 00:13:10:30:24:9C on channel 6 with WEP encryption). It also displays a list of detected wireless clients ("stations"), in this case 00:09:5B:EB:C5:2B and 00:02:2D:C1:5D:1F. By relying on the signal power, one can even physically pinpoint the location of a given station.
