@@ -159,11 +159,11 @@ char usage[] =
 "      -x2        : enable last two keybytes bruteforcing"
 "%s"
 "      -y         : experimental single bruteforce mode\n"
-"      -K         : korek attacks (pre-ptw)\n"
+"      -K         : KoreK attacks (pre-PTW)\n"
 "      -s         : show ASCII version of the key\n"
-"      -M <num>   : maximum number of ivs to use\n"
-"      -D         : wep decloak mode\n"
-"      -P <num>   : ptw debug: 1 disable klein, 2 ptw\n"
+"      -M <num>   : maximum number of IVs to use\n"
+"      -D         : WEP decloak mode\n"
+"      -P <num>   : PTW debug: 1 disable Klein, 2 PTW\n"
 "\n"
 "  WEP and WPA-PSK cracking options:\n"
 "\n"
