@@ -62,6 +62,7 @@ Version 0.9.2 (changes from aircrack-ng 0.9.1) - Released ?? ??? 2007:
 * airodump-ng: Fixed: Wrong information printed in CSV file (PSK for WEP with Shared key instead of SKA).
 * airdecap-ng: Fixed bug in calc_pmk() function causes wrong PMK to be computed
 * airmon-ng: Fixed detection of N770 wireless interface
+* manpages: updated airodump-ng manpage
 * Makefiles: Fixed OpenBSD makefile.
 
 Version 0.9.1 (changes from aircrack-ng 0.9) - Released 25 june 2007:
